fix button alignment on ff

--- a/public/sweetie.css
+++ b/public/sweetie.css
@@ -24,6 +24,8 @@ button {
 	width: 50px;
 	height: 50px;
 	padding: 10px;
+	vertical-align: bottom;
+	line-height: 1;
 }
 
 .info-button {
